--- a/packages/color_package/pubspec.yaml
+++ b/packages/color_package/pubspec.yaml
@@ -1,8 +1,7 @@
-name: leave_package
+name: color_package
 description: "A new Flutter package project."
 version: 0.0.1
 homepage:
-# resolution: workspace
 
 environment:
   sdk: ^3.8.1
