--- a/packages/login_package/pubspec.yaml
+++ b/packages/login_package/pubspec.yaml
@@ -2,7 +2,7 @@ name: login_package
 description: "A new Flutter package project."
 version: 0.0.1
 homepage:
-resolution: workspace
+# resolution: workspace
 
 environment:
   sdk: ^3.8.1
