--- a/packages/splash/pubspec.yaml
+++ b/packages/splash/pubspec.yaml
@@ -1,7 +1,8 @@
-name: leave_package
+name: splash
 description: "A new Flutter package project."
 version: 0.0.1
 homepage:
+publish_to: none
 # resolution: workspace
 
 environment:
@@ -11,6 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  color_package:
+    path: ../../packages/color_package
 
 dev_dependencies:
   flutter_test:
@@ -24,9 +27,9 @@ dev_dependencies:
 flutter:
 
   # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/cipher_labz_logo.png
+    - assets/open_sky_logo.png
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/to/asset-from-package
