--- a/apps/hr_app/pubspec.yaml
+++ b/apps/hr_app/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A new Flutter project."
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# resolution: workspace
+#resolution: workspace
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -33,10 +33,16 @@ dependencies:
   flutter:
     sdk: flutter
   splash:
+    path: ../../packages/splash
+  login_package:
+    path: ../../packages/login_package
+  shared_resources: 
+    path: ../../packages/shared_resources
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5  
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +61,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  # fonts:
+  #     - family: Poppins
+  #       fonts:
+  #         - asset: packages/shared_resources/assets/fonts/Poppins-Thin100.ttf
+  #           weight: 100
   # assets:
   #   - assets/splash/cipher_labz_logo.png
   #   - assets/splash/open_sky_logo.png
