--- a/packages/splash/pubspec.yaml
+++ b/packages/splash/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
     sdk: flutter
   color_package:
     path: ../../packages/color_package
+  shared_resources:
+    path: ../../packages/shared_resources
+  login_package:
+    path: ../../packages/login_package
 
 dev_dependencies:
   flutter_test:
