--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,22 +2,18 @@ name: cipherlabz_app
 publish_to: none
 environment:
   sdk: ^3.8.0
-# workspace:
-#   - apps/hr_app
-#   - packages/attendance_package
-#   - packages/leave_package
-#   - packages/login_package
-#   - packages/splash
+
+dependencies: 
+  intl: ^0.18.1
+  location: ^5.0.0
+  google_maps_flutter: ^2.5.0
+  flutter_swipe_button: ^2.1.1+1
+  
+  cupertino_icons: ^1.0.8
+  local_auth: ^2.3.0  
 
 dev_dependencies:
   build_runner: ^2.4.6
   melos: 6.3.3
+  flutter_lints: ^5.0.0
 
-# melos:
-#   scripts:
-#     build:
-#       run: dart run build_runner build --delete-conflicting-outputs
-#       exec:
-#         concurrency: 4
-#       packageFilters:
-#         dependsOn: build_runner 
