--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,18 @@ environment:
   sdk: ^3.8.0
 
 dependencies: 
+  flutter:
+    sdk: flutter
+  provider: ^6.1.5
+  flutter_svg: ^2.0.7
+  dartz: ^0.10.1
+  shared_preferences: ^2.5.3  
   intl: ^0.18.1
   location: ^5.0.0
   google_maps_flutter: ^2.5.0
-  flutter_swipe_button: ^2.1.1+1
-  
+  flutter_swipe_button: ^2.1.1+1  
   cupertino_icons: ^1.0.8
-  local_auth: ^2.3.0  
+  local_auth: ^2.3.0   
 
 dev_dependencies:
   build_runner: ^2.4.6
