--- a/apps/hr_app/android/app/src/main/AndroidManifest.xml
+++ b/apps/hr_app/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
         android:label="hr_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBY6AyWMTtdjmefKr8wa5bl1giadb0v5AI"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
