--- a/packages/attendance_package/pubspec.yaml
+++ b/packages/attendance_package/pubspec.yaml
@@ -1,7 +1,8 @@
 name: attendance_package
 description: "A new Flutter package project."
 version: 0.0.1
-homepage:
+publish_to: none
+#homepage:
 # resolution: workspace
 
 environment:
@@ -11,6 +12,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  provider: ^6.1.5
+  flutter_svg: ^2.0.7
+  dartz: ^0.10.1
+  shared_preferences: ^2.5.3  
+  intl: ^0.18.1  
+  flutter_swipe_button: ^2.1.1+1  
+  cupertino_icons: ^1.0.8
+
+  color_package:
+    path: ../../packages/color_package
+  shared_resources:
+    path: ../../packages/shared_resources
+  core:
+    path: ../../packages/core
+
+  login_package:
+    path: ../../packages/login_package
 
 dev_dependencies:
   flutter_test:
@@ -23,11 +42,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  uses-material-design: true 
 
   # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/profile_image.png
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/to/asset-from-package
