--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -9,7 +9,10 @@ environment:
 
 dependencies:
   flutter:
-    sdk: flutter
+    sdk: flutter  
+  local_auth: ^2.3.0  
+  location: ^5.0.0
+  google_maps_flutter: ^2.5.0
 
 dev_dependencies:
   flutter_test:
