Attendance package updated

--- a/apps/hr_app/pubspec.yaml
+++ b/apps/hr_app/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
     sdk: flutter
   shared_resources: 
     path: ../../packages/shared_resources
+  core: 
+    path: ../../packages/core
   splash:
     path: ../../packages/splash
   login_package:
