--- a/packages/attendance_package/pubspec.yaml
+++ b/packages/attendance_package/pubspec.yaml
@@ -19,7 +19,9 @@ dependencies:
   shared_preferences: ^2.5.3  
   intl: ^0.18.1  
   flutter_swipe_button: ^2.1.1+1  
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.8  
+  location: ^5.0.0
+  collection: ^1.19.1
 
   color_package:
     path: ../../packages/color_package
