--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -1,6 +1,7 @@
 name: core
 description: "A new Flutter package project."
 version: 0.0.1
+publish_to: none
 homepage:
 
 environment:
@@ -13,6 +14,9 @@ dependencies:
   local_auth: ^2.3.0  
   location: ^5.0.0
   google_maps_flutter: ^2.5.0
+
+  attendance_package: 
+    path: ../../packages/attendance_package
 
 dev_dependencies:
   flutter_test:
