--- a/packages/home_package/pubspec.yaml
+++ b/packages/home_package/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   dartz: ^0.10.1
   shared_preferences: ^2.5.3  
   intl: ^0.18.1
+  flutter_riverpod: ^2.6.1
   
   login_package: 
     path: ../../packages/login_package
