--- a/apps/hr_app/pubspec.yaml
+++ b/apps/hr_app/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
     path: ../../packages/splash
   login_package:
     path: ../../packages/login_package
+  user_package:
+    path: ../../packages/user_package
   schedule_package:
     path: ../../packages/schedule_package
   announcement_package:
@@ -52,6 +54,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   provider: ^6.1.5  
+  shared_preferences: ^2.5.3  
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
