--- a/packages/announcement_package/pubspec.yaml
+++ b/packages/announcement_package/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   dartz: ^0.10.1
   shared_preferences: ^2.5.3  
   intl: ^0.18.1
+  flutter_riverpod: ^2.6.1
 
   color_package:
     path: ../../packages/color_package
