--- a/packages/schedule_package/pubspec.yaml
+++ b/packages/schedule_package/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dartz: ^0.10.1
   intl: ^0.18.1
   shared_preferences: ^2.5.3
+  flutter_riverpod: ^2.6.1
 
   color_package:
     path: ../../packages/color_package
