--- a/packages/login_package/pubspec.yaml
+++ b/packages/login_package/pubspec.yaml
@@ -1,79 +1,37 @@
 name: login_package
-description: "A new Flutter package project."
+description: A new Flutter package project.
 version: 0.0.1
 publish_to: none
-# resolution: workspace
-
 environment:
   sdk: ^3.8.1
   flutter: ">=1.17.0"
-
 dependencies:
   flutter:
     sdk: flutter
   provider: ^6.1.5
   flutter_svg: ^2.0.7
   dartz: ^0.10.1
-  shared_preferences: ^2.5.3  
-  intl: ^0.18.1  
+  shared_preferences: ^2.5.3
+  intl: ^0.18.1
   flutter_riverpod: ^2.6.1
-  
   color_package:
     path: ../../packages/color_package
   shared_resources:
     path: ../../packages/shared_resources
   core:
     path: ../../packages/core
-    
-  splash: 
+  splash:
     path: ../../packages/splash
-  user_package: 
+  user_package:
     path: ../../packages/user_package
-  attendance_package: 
+  attendance_package:
     path: ../../packages/attendance_package
-  home_package: 
+  home_package:
     path: ../../packages/home_package
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
   assets:
     - assets/login_page_img.png
-
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/to/asset-from-package
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/to/font-from-package
