Login package dependencies updated

--- a/packages/login_package/pubspec.yaml
+++ b/packages/login_package/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
     path: ../../packages/attendance_package
   home_package:
     path: ../../packages/home_package
+  leave_package:
+    path: ../../packages/leave_package
 dev_dependencies:
   flutter_test:
     sdk: flutter
