--- a/packages/leave_package/pubspec.yaml
+++ b/packages/leave_package/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   collection: ^1.19.1
   flutter_riverpod: ^2.6.1
+  fl_chart: ^1.0.0
   color_package:
     path: ../../packages/color_package
   shared_resources:
