--- a/packages/leave_package/pubspec.yaml
+++ b/packages/leave_package/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   collection: ^1.19.1
   flutter_riverpod: ^2.6.1
   fl_chart: ^1.0.0
+  logger: ^2.6.1
   color_package:
     path: ../../packages/color_package
   shared_resources:
