Employee reports package updated

--- a/packages/employee_reports_package/pubspec.yaml
+++ b/packages/employee_reports_package/pubspec.yaml
@@ -44,6 +44,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/profile_image.png
 
   # To add assets to your package, add an assets section, like this:
   # assets:
