--- a/packages/user_profile_package/pubspec.yaml
+++ b/packages/user_profile_package/pubspec.yaml
@@ -34,4 +34,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-flutter: null
+flutter: 
+  assets:
+    - assets/profile_image.png
+  
